--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /PhoenixApi/.vs/PhoenixApi/FileContentIndex/3b5061bf-6500-498a-b13d-fba6df8a5415.vsidx
+/PhoenixApi/.vs/PhoenixApi/FileContentIndex
