Added simple auth

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 
 /PhoenixApi/.vs/PhoenixApi/FileContentIndex/3b5061bf-6500-498a-b13d-fba6df8a5415.vsidx
 /PhoenixApi/.vs/PhoenixApi/FileContentIndex
+/PhoenixApi/PhoenixApi/appsettings.Development.json
